@@ -308,18 +308,26 @@ static void p_time(Sfio_t *out, const char *format, clock_t *tm)
 			n = 1;
 		else if(c=='S')
 			n = 2;
+		else if(c=='C')
+			n = 3;
 		else
 		{
 			stkseek(stkp,offset);
 			errormsg(SH_DICT,ERROR_exit(0),e_badtformat,c);
 			return;
 		}
-		d = (double)tm[n]/sh.lim.clk_tck;
+		if(n==3)
+		{
+			/* sum of U + S */
+			d = (double)((tm[1]+tm[2])/sh.lim.clk_tck);
+		}
+		else
+			d = (double)tm[n]/sh.lim.clk_tck;
 	skip:
 		if(l_modifier)
-			l_time(stkp, tm[n], precision);
+			l_time(stkp, n==3 ? tm[1] + tm[2] : tm[n], precision);
 		else
-			sfprintf(stkp,"%.*f",precision, d);
+			sfprintf(stkp,"%.*f", precision, d);
 #endif
 		first = format+1;
 	}
